# StageFL

./: .Makefile.swp  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  README.md  c3s_deploy.sh  client_id.json  clientapp.Dockerfile  current_id.json  docker-compose.yml  env_setup.sh  requirements.txt  run_client.sh  run_experiments.py  run_nodes.sh  run_slurm.sh  serverapp.Dockerfile  start_training.sh  stop_containers.sh  wandb_setup.sh
pytorchtest/: .pyproject.toml.swp  __init__.py  client_app.py  client_id.json  current_id.json  experiment_log.json  experiment_metrics.py  experiment_timings.json  group_id.json  pyproject.toml  rounds_tracker.json  server_app.py  task.py
wandb/: latest-run
wandb/run-20250426_181443-bkm97ysw/: run-bkm97ysw.wandb
wandb/run-20250428_170358-50sfqqg9/: run-50sfqqg9.wandb
wandb/run-20250428_171154-q858t1yv/: run-q858t1yv.wandb
wandb/run-20250428_171609-vrj1lqao/: run-vrj1lqao.wandb
wandb/run-20250428_171616-2vnioy2f/: run-2vnioy2f.wandb
wandb/run-20250428_171618-8l0rpwym/: run-8l0rpwym.wandb
wandb/run-20250428_171709-18jc2ati/: run-18jc2ati.wandb
wandb/run-20250428_171709-jc8pez8v/: run-jc8pez8v.wandb
wandb/run-20250428_171726-cx0ecw62/: run-cx0ecw62.wandb
wandb/run-20250428_171726-p4nu8qle/: run-p4nu8qle.wandb
wandb/run-20250428_171816-iiyzxx63/: run-iiyzxx63.wandb
wandb/run-20250428_171817-ar88xuat/: run-ar88xuat.wandb
wandb/run-20250428_171834-vl7fochs/: run-vl7fochs.wandb
wandb/run-20250428_171835-8x4ekyqk/: run-8x4ekyqk.wandb
wandb/run-20250428_171919-4gfol8a6/: run-4gfol8a6.wandb
(+17324 files in other folders)
