[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorchtest"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "wandb",
  
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dcannizzaro"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
# Number of rounds the server will run during training
num-server-rounds = 2
fraction-fit = 1
fraction-evaluate = 1
local-epochs = 2


[tool.flwr.federations]
default = "test"

[tool.flwr.federations.test]
insecure = true
address = "127.0.0.1:9093"
